# apps-huggingface-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  hooks.Dockerfile  pyproject.toml
.apolo/: applications.yaml
.apolo/src/apolo_apps_hf_proxy/: __init__.py  inputs_processor.py  outputs_processor.py  types.py
.apolo/src/apolo_apps_hf_proxy/schemas/: HfProxyInputs.json  HfProxyOutputs.json
.apolo/tests/: conftest.py
.apolo/tests/unit/: constants.py
.apolo/tests/unit/hf_proxy/: test_input_generation.py  test_outputs_generation.py
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/workflows/: ci.yml  test.yaml
charts/hf-proxy/: Chart.yaml  values.yaml
charts/hf-proxy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
charts/hf-proxy/templates/tests/: test-connection.yaml
src/: __init__.py  cache.py  config.py  dependencies.py  filters.py  logging.py  main.py  models.py  services.py
tests/: __init__.py  conftest.py  test_cache.py  test_filters.py  test_healthz.py  test_outputs.py  test_services.py
