[tool.poetry]
name = "hf-proxy"
version = "0.1.0"
description = "Production-ready HuggingFace API proxy service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apolo_apps_hf_proxy", from = ".apolo/src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"
python-json-logger = "^3.1.0"
apolo-app-types = "25.11.4"
aiofiles = "^25.1.0"
huggingface-hub = "^1.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
