[tool.poetry]
name = "hf-proxy"
version = "0.1.0"
description = "Production-ready HuggingFace API proxy service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apolo_apps_hf_proxy", from = ".apolo/src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.3"
uvicorn = {extras = ["standard"], version = "^0.44.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.13.1"
httpx = "^0.28.0"
python-json-logger = "^4.1.0"
apolo-app-types = "26.4.1"
aiofiles = "^25.1.0"
huggingface-hub = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.0"
ruff = "^0.15.9"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
